--- a/KalanSageFront/k_application/analysis_options.yaml
+++ b/KalanSageFront/k_application/analysis_options.yaml
@@ -4,3 +4,4 @@ analyzer:
     prefer_const_constructors: ignore
     library_private_types_in_public_api: ignore
     use_build_context_synchronously: ignore
+    prefer_const_literals_to_create_immutables: ignore
