--- a/KalanSageBack/kalansage/src/main/resources/application.properties
+++ b/KalanSageBack/kalansage/src/main/resources/application.properties
@@ -2,12 +2,18 @@ spring.application.name=cmd
 spring.datasource.url=jdbc:mysql://localhost:3306/kalan_sage
 spring.datasource.username=root
 spring.datasource.password=
+#----------------------------------------------------------------
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
+#----------------------------------------------------------------
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+#----------------------------
+server.address=192.168.190.1
+server.port=8080
+#----------------------------
 logging.level.org.springframework.web=DEBUG
 logging.level.com.yourapp=DEBUG
 
