back end updated

--- a/KalanSageBack/kalansage/pom.xml
+++ b/KalanSageBack/kalansage/pom.xml
@@ -107,6 +107,7 @@
         <dependency>
             <groupId>com.google.firebase</groupId>
             <artifactId>firebase-admin</artifactId>
+            <version>9.1.1</version>
         </dependency>
     </dependencies>
 
