--- a/KalanSageFront/k_application/pubspec.yaml
+++ b/KalanSageFront/k_application/pubspec.yaml
@@ -13,8 +13,8 @@ dependencies:
   pinput: ^5.0.0
   flutter_svg: ^1.0.0
   shared_preferences: ^2.0.6
-  firebase_core: ^1.13.0
-  firebase_messaging: ^11.2.1
+ # firebase_core: ^1.13.0
+  #firebase_messaging: ^11.2.1
 
 dev_dependencies:
   flutter_test:
@@ -29,7 +29,15 @@ flutter:
     - assets/images/
     - assets/images/profile.png
     - assets/images/slider/
+    #---------------------------------------------
     - assets/images/modules/
+    - assets/images/modules/figma.png
+    - assets/images/modules/html.png
+    - assets/images/modules/js.png
+    - assets/images/modules/java.jpg
+    - assets/images/modules/SpringBoot.png
+    - assets/images/modules/informatique.jpg
+    #---------------------------------------------
     - assets/icons/home.svg
     - assets/icons/grid_view.svg
     - assets/icons/book.svg
