--- a/KalanSageFront/k-admin/package.json
+++ b/KalanSageFront/k-admin/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^18.2.7",
     "@angular/platform-browser-dynamic": "^18.2.7",
     "@angular/router": "^18.2.7",
+    "@iconify-icons/solar": "^1.2.3",
     "@ng-matero/extensions": "^17.0.0",
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
