--- a/KalanSageFront/k_application/pubspec.yaml
+++ b/KalanSageFront/k_application/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
   pinput: ^5.0.0
   flutter_svg: ^1.0.0
   shared_preferences: ^2.0.6
+  lottie: ^2.0.0
+  video_player: ^2.4.5
  # firebase_core: ^1.13.0
   #firebase_messaging: ^11.2.1
 
