--- a/KalanSageBack/kalansage/src/main/resources/application.properties
+++ b/KalanSageBack/kalansage/src/main/resources/application.properties
@@ -7,6 +7,13 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
 #----------------------------------------------------------------
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=alextienou14@gmail.com
+spring.mail.password=fgok lmld dqgf vnau
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+#-----------------------------------------------------------------
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
