--- a/KalanSageFront/k_application/pubspec.yaml
+++ b/KalanSageFront/k_application/pubspec.yaml
@@ -40,6 +40,7 @@ flutter:
     - assets/icons/bookmarked.svg
     - assets/icons/User.svg
     - assets/icons/dev.svg
+    - assets/icons/default.svg
     - assets/icons/com.svg
     - assets/icons/video.svg
     - assets/icons/science.svg
