--- a/KalanSageFront/k_application/android/app/src/main/AndroidManifest.xml
+++ b/KalanSageFront/k_application/android/app/src/main/AndroidManifest.xml
@@ -1,34 +1,33 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
-        android:label="KalanSage"
-        android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
-        android:netWorkedEcurityConfig="@xml/network_security_config">
-        <!-- android:networkSecurityConfig="@xml/network_security_config"> -->
+            android:label="KalanSage"
+            android:icon="@mipmap/ic_launcher"
+            android:usesCleartextTraffic="true"
+            android:networkSecurityConfig="@xml/network_security_config">
 
         <!-- Activity-->
         <activity
-            android:name=".MainActivity"
-            android:exported="true"
-            android:launchMode="singleTop"
-            android:taskAffinity=""
-            android:theme="@style/LaunchTheme"
-            android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"
-            android:hardwareAccelerated="true"
-            android:windowSoftInputMode="adjustResize">
+                android:name=".MainActivity"
+                android:exported="true"
+                android:launchMode="singleTop"
+                android:taskAffinity=""
+                android:theme="@style/LaunchTheme"
+                android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"
+                android:hardwareAccelerated="true"
+                android:windowSoftInputMode="adjustResize">
             <meta-data
-              android:name="io.flutter.embedding.android.NormalTheme"
-              android:resource="@style/NormalTheme"
-              />
+                    android:name="io.flutter.embedding.android.NormalTheme"
+                    android:resource="@style/NormalTheme"
+            />
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <!-- Reset Password Activity  -->
+        <!-- Reset Password Activity-->
         <activity
-            android:name=".ResetPasswordActivity" 
-            android:exported="true">
+                android:name=".ResetPasswordActivity"
+                android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -38,10 +37,10 @@
         </activity>
 
         <!-- Don't delete the meta-data below.
-             This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
+              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java  -->
         <meta-data
-            android:name="flutterEmbedding"
-            android:value="2" />
+                android:name="flutterEmbedding"
+                android:value="2" />
     </application>
     <!-- Required to query activities that can process text, see:
          https://developer.android.com/training/package-visibility and
@@ -55,5 +54,5 @@
         </intent>
     </queries>
 
-     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
 </manifest>
