--- a/KalanSageFront/k_application/android/app/src/main/AndroidManifest.xml
+++ b/KalanSageFront/k_application/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
+            android:enableOnBackInvokedCallback="true"
             android:label="KalanSage"
             android:icon="@mipmap/ic_launcher"
             android:usesCleartextTraffic="true"
